_ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkfn-svc
  labels:
    run: linkfn-svc
  namespace: linkfn
#  annotations:
#    dns.alpha.kubernetes.io/external: print.makerdev.nl.
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 3000
    protocol: TCP
  selector:
    app: linkfn
